# MavlinkProject

./: CMakeLists.txt  Camera_Definition_000.xml  Camera_Definition_001.xml  Camera_Definition_002.xml  Main.qml  README.md  main.cpp
CommManager/: ackhandler.cpp  ackhandler.h  maincomm.cpp  maincomm.h  mavlinkcommmanager.cpp  mavlinkcommmanager.h
CommManager/ParseXML/: httphost.h  parsexml.cpp  parsexml.h
DummyTest/: udpCheck.py
